@@ -1,3 +1,8 @@
+Apr 26, 2004
+
+  * FIXED: Buffer overflow reading too long NAME, NMTOKEN, etc.
+    Fabien Todescato.
+
 Jan 17, 2004
 
   * FIXED: handling <?xml ...?> switching from SGML to XML mode.
